--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -7,14 +7,11 @@
 <article class="{{post_class}}">
 	<div class="inner">
 		<header class="post-header">
-			<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-			<span class="post-meta">{{authors separator=", "}} {{tags prefix=(t "on ") separator=", "}} | <time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time></span>
-			<div class="clear"></div>
+			<h2 class="post-index-title"><a href="{{url}}">{{{title}}}</a></h2>
+			<span class="post-meta"><time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time></span>
+
 		</header>
 
-		<section class="post-excerpt">
-			<p>{{excerpt}}&hellip;</p>
-		</section>
 	</div>
 </article>
 
